test/pass/13-model_assign.perk
import "stdio.h"

model Test {
    let str: char* = "Hello, World!"
}

fun main(): void {
    let test := summon Test();
    test.str = "Hello, Universe!";
    printf("%s", test.str);
    banish test;
}