test/fail/10-double_declaration_in_model.perk
model Test {
    let a: char* = "test",
    let a: char* = "test"
}